--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Colin's Personal Website</title>
   </head>
 
-  <body>
+  <body style="background-color: #B8FFF3;">
     <table>
       <td><img src="circle-cropped1.png" alt="Colin's Profile Picture"></td>
       <td><h1>Colin Brainerd</h1>
