--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Hobbies</title>
   </head>
-  <body>
+  <body style="background-color: #B8FFF3;">
     <h3>My Hobbies</h3>
     <ol>
       <li>Studying Different Topics</li>
