--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>My Contact Information</title>
   </head>
-  <body>
+  <body style="background-color: #B8FFF3;">
     <h2>Contact Information</h2>
         <p>Colin.C.Brainerd@gmail.com</p>
         <br>
-        <p>(618)419-5564</p>
+        <p>(618)***-5564</p>
         <br>
         <p>PO Box</p>
         <br>
